--- a/src/app/toolbar/layouts/vertical-navigation/toolbar.html
+++ b/src/app/toolbar/layouts/vertical-navigation/toolbar.html
@@ -6,7 +6,7 @@
             <md-icon md-font-icon="icon-menu" class="icon"></md-icon>
         </md-button>
 
-       <div class="ph-16 h3 secondary-text">Atomic Burger</div>
+       <div class="ph-16 h3">Atomic Burger</div>
 
         <md-progress-circular id="toolbar-progress" ng-if="$root.loadingProgress" class="md-accent"
                               md-mode="indeterminate" md-diameter="64">
