--- a/src/app/main/team/show/team-show.html
+++ b/src/app/main/team/show/team-show.html
@@ -52,6 +52,17 @@
                     </md-content>
                 </md-tab-body>
             </md-tab>
+            <md-tab>
+                <md-tab-label>
+                    <span>Employee File</span>
+                </md-tab-label>
+                <md-tab-body>
+                    <md-content class="clear-bg"
+                                ng-include="'app/main/team/show/tabs/employee-file.html'">
+                    </md-content>
+                </md-tab-body>
+            </md-tab>
+
         </md-tabs>
 
     </div>
