--- a/src/app/main/timecards/views/summary.html
+++ b/src/app/main/timecards/views/summary.html
@@ -17,7 +17,7 @@
     </tr>
     <tr class="text-bold">
         <td colspan="3">Total</td>
-        <td>12.32</td>
+        <td>{{vm.totalHours() | number:2}}</td>
     </tr>
     </tbody>
 
